add: auth middleware for groups
